--- a/index.html
+++ b/index.html
@@ -10,9 +10,13 @@
 </head>
 
 <body>
-  <div class='cartel'></div>
+  <div id='fence' src='fence.jpg'>
+    <div id="barbarian">
+      <div class="tree"></div>
+    </div>
+  </div>
 
-  <div id="barbarian"></div>
+
 
 <script   src="https://code.jquery.com/jquery-2.2.4.min.js"   integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44="   crossorigin="anonymous"></script>
 <script src="js/main.js"></script>
